--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
+  <a href="/wwr/index.html">WEEk 3 Activity</a>
 </nav>
 </body>
 </html>
