--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
-  <a href="wwr/index2.html">WEEk 3 Activity</a>
+  <a class='week3' href="wwr/index2.html">WEEk 3 Activity</a>
 </nav>
 </body>
 </html>
