--- a/wwr/index2.html
+++ b/wwr/index2.html
@@ -8,71 +8,82 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo">
-        </a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="#">Page 2</a>
-                </li>
-                <li>
-                    <a href="site-plan-rafting.html">Site Plan</a>
-                </li>
-                <li>
-                    <a href="contactus.html">Contact Us</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
-        </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar </h4>
-            <div class='button-box'>
-                <a class='book' href="rates.html">Book Now</a>
+    <div class="mainContainer">
+        <header class="headerContainer">
+            <a id="logo_link" href="index2.html" target="_blank">
+                <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo">
+            </a>
+            <nav class="navContainer">
+                <ul class="linksContainer">
+                    <li>
+                        <a href="index2.html" target="_blank">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">Page 2</a>
+                    </li>
+                    <li>
+                        <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
+                    </li>
+                    <li>
+                        <a href="contactus.html" target="_blank">Contact Us</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="mainImg" id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
             </div>
-        </section>
-    </div>
-    <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
-    </main>
-    <footer>
-        <h3>Dry Oar Zeir Braidi</h3>
-        <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
-        <h3><a href="contactus.html">Contact Us</a></h3>
-        <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
+            <section id="hero-msg">
+                <h1 class="home-title">Have An Adventure</h1>
+                <h4>Make Memories with Dry Oar </h4>
+                <div class='button-box'>
+                    <a  class='book'href="rates.html" target="_blank">Book Now</a>
+                </div>
+            </section>
         </div>
-    </footer>
+        <main class="home-grid">
+            <section class="rivers-card">
+                <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+                <img class="icon" src="images/river_icon.png" alt="river icon">
+                <h2>Rivers</h2>
+            </section>
+            <section class="camping-card">
+                <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+                <img class="icon" src="images/fire_icon.png" alt="fire icon">
+                <h2>Camping</h2>
+            </section>
+            <section class="rapids-card">
+                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="images/oars.png" alt="oars icon">
+                <h2>Rapids</h2>
+            </section>
+            <div id="background"> 
+                <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+                <section class="msg">
+                    <h2>More Than Just The Thrill</h2>
+                    <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                    <div class='join'>
+                        <a  href="rivers.html">Join Us</a>
+                    </div>
+                </section>
+            </div>
+        </main>
+        <footer>
+            <h3>Dry Oar || Zeir Braidi</h3>
+            <h3><a href="site-plan-rafting.html" target="_blank">Site Plan</a></h3>
+            <h3><a href="contactus.html" target="_blank">Contact Us</a></h3>
+            <div class="social">
+                <a href="https://facebook.com">
+                    <img src="images/facebook.png" alt="fb icon" target="_blank">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+        </footer>
+    </div>
 </body>
 </html>
