--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/wwr/styles/styles.css">
 </head>
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
@@ -15,7 +16,7 @@
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
-  <a class='week3' href="wwr/index2.html">WEEk 3 Activity</a>
+  <a class='week4' href="wwr/index2.html">WEEk 4 Activity</a>
 </nav>
 </body>
 </html>
