--- a/wwr/index2.html
+++ b/wwr/index2.html
@@ -38,7 +38,7 @@
                 <h1 class="home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar </h4>
                 <div class='button-box'>
-                    <a  class='book'href="rates.html" target="_blank">Book Now</a>
+                    <a  class='book' href="rates.html" target="_blank">Book Now</a>
                 </div>
             </section>
         </div>
@@ -74,8 +74,8 @@
             <h3><a href="site-plan-rafting.html" target="_blank">Site Plan</a></h3>
             <h3><a href="contactus.html" target="_blank">Contact Us</a></h3>
             <div class="social">
-                <a href="https://facebook.com">
-                    <img src="images/facebook.png" alt="fb icon" target="_blank">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
                     <img src="images/twitter.png" alt="twitter icon">
@@ -83,6 +83,7 @@
                 <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
+            </div>
         </footer>
     </div>
 </body>
