--- a/wwr/index2.html
+++ b/wwr/index2.html
@@ -64,7 +64,7 @@
                     <h2>More Than Just The Thrill</h2>
                     <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
                     <div class='join'>
-                        <a  href="rivers.html">Join Us</a>
+                        <a  href="rivers.html" target="_blank">Join Us</a>
                     </div>
                 </section>
             </div>
