--- a/wwr/index2.html
+++ b/wwr/index2.html
@@ -10,22 +10,22 @@
 <body>
     <div class="mainContainer">
         <header class="headerContainer">
-            <a id="logo_link" href="index2.html" target="_blank">
+            <a id="logo_link" href="index2.html">
                 <img class="logo" src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo">
             </a>
             <nav class="navContainer">
                 <ul class="linksContainer">
                     <li>
-                        <a href="index2.html" target="_blank">Home</a>
+                        <a href="index2.html">Home</a>
                     </li>
                     <li>
-                        <a href="#" target="_blank">Page 2</a>
+                        <a href="#">Page 2</a>
                     </li>
                     <li>
-                        <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
+                        <a href="site-plan-rafting.html">Site Plan</a>
                     </li>
                     <li>
-                        <a href="contactus.html" target="_blank">Contact Us</a>
+                        <a href="contactus.html">Contact Us</a>
                     </li>
                 </ul>
             </nav>
@@ -38,7 +38,7 @@
                 <h1 class="home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar </h4>
                 <div class='button-box'>
-                    <a  class='book' href="rates.html" target="_blank">Book Now</a>
+                    <a  class='book' href="rates.html">Book Now</a>
                 </div>
             </section>
         </div>
@@ -64,7 +64,7 @@
                     <h2>More Than Just The Thrill</h2>
                     <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
                     <div class='join'>
-                        <a  href="rivers.html" target="_blank">Join Us</a>
+                        <a  href="rivers.html">Join Us</a>
                     </div>
                 </section>
             </div>
@@ -72,7 +72,7 @@
         <footer>
             <h3>Dry Oar || Zeir Braidi</h3>
             <h3><a href="site-plan-rafting.html" target="_blank">Site Plan</a></h3>
-            <h3><a href="contactus.html" target="_blank">Contact Us</a></h3>
+            <h3><a href="contactus.html">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
