--- a/wwr/index2.html
+++ b/wwr/index2.html
@@ -7,7 +7,7 @@
     <title>Dry Oars</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body id ="darkMode">
     <div class="mainContainer">
         <header class="headerContainer">
             <a id="logo_link" href="index2.html">
@@ -32,31 +32,38 @@
         </header>
         <div class="mainImg" id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+                <img id="hero-img" class='heroImg' src="images/hero.png" alt="People enjoying white water rafting">
+                <section id="hero-msg">
+                    <h1 class="home-title">Have An Adventure</h1>
+                    <h4>Make Memories with Dry Oar </h4>
+                    <div class='button-box'>
+                        <a  class='book' href="rates.html">Book Now</a>
+                    </div>
+                </section>
             </div>
-            <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
-                <div class='button-box'>
-                    <a  class='book' href="rates.html">Book Now</a>
-                </div>
-            </section>
+            
         </div>
         <main class="home-grid">
             <section class="rivers-card">
                 <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-                <img class="icon" src="images/river_icon.png" alt="river icon">
-                <h2 class="card-title">Rivers</h2>
+                <div class="icon-title">
+                    <img class="icon" src="images/river_icon.png" alt="river icon">
+                    <h2 class="card-title">Rivers</h2>
+                </div>
             </section>
             <section class="camping-card">
                 <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-                <img class="icon" src="images/fire_icon.png" alt="fire icon">
-                <h2 class="card-title">Camping</h2>
+                <div class="icon-title">
+                    <img class="icon" src="images/fire_icon.png" alt="fire icon">
+                    <h2 class="card-title">Camping</h2>
+                </div>
             </section>
             <section class="rapids-card">
                 <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-                <img class="icon" src="images/oars.png" alt="oars icon">
-                <h2 class="card-title">Rapids</h2>
+                <div class="icon-title">
+                    <img class="icon" src="images/oars.png" alt="oars icon">
+                    <h2 class="card-title">Rapids</h2>
+                </div>
             </section>
             <div id="background"> 
                 <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
@@ -86,5 +93,6 @@
             </div>
         </footer>
     </div>
+</script>
 </body>
 </html>
