--- a/wwr/index2.html
+++ b/wwr/index2.html
@@ -76,23 +76,25 @@
                 </section>
             </div>
         </main>
-        <footer>
+    </div>
+    <footer>
+        <div class="footerLinks">
             <h3>Dry Oar || Zeir Braidi</h3>
             <h3><a href="site-plan-rafting.html" target="_blank">Site Plan</a></h3>
             <h3><a href="contactus.html">Contact Us</a></h3>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a>
-            </div>
-        </footer>
-    </div>
+        </div>
+        <div class="redSocial">
+            <a href="https://facebook.com" target="_blank">
+                <img class="icono-social" src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img class="icono-social" src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img class="icono-social" src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </script>
 </body>
 </html>
