--- a/wwr/index2.html
+++ b/wwr/index2.html
@@ -19,7 +19,7 @@
                         <a href="index2.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Page 2</a>
+                        <a href="https://wireframe.cc/aEEFKv">Page 2</a>
                     </li>
                     <li>
                         <a href="site-plan-rafting.html">Site Plan</a>
