--- a/sitePlan/site-plan.html
+++ b/sitePlan/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img class='logo' src="Braidi WD-logos.jpeg" alt="Logo image">
+      <img class='logo' src="./images/Braidi WD-logos.jpeg" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -158,11 +158,9 @@
         Create three wireframes for your site. One for each page and list them here</p>
 
       <h3>Home</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="home page wireframe">
-
+      <img class="wireframesB" src="images/Captura de Pantalla 2022-06-13 a la(s) 10.56.24 p.m..png" alt="home page wireframe">
+      <img  class="wireframesB" src="images/Captura de Pantalla 2022-06-13 a la(s) 10.56.29 p.m..png" alt="home page wireframe">
+      <img  class="wireframesB" src="images/Captura de Pantalla 2022-06-13 a la(s) 10.56.35 p.m..png" alt="home page wireframe">
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
