--- a/sitePlan/site-plan.html
+++ b/sitePlan/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">about</a>
+        <a href="#">Contact</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          About <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contact  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,30 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        [Tired of searching the internet and not finding your own business? even when you already have a web domain? We are experts in SEO, web development and digital advertising. Working together everyone will know the brand of your business and what differentiates it, with an effective and aesthetic design and interface.]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img class="imgExample" src="images/lctqqh3t7kfnwpxljhl7.jpg.png" alt="image for homepage">
+        <img class="imgExample" src=
+        "images/Web-Development.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>About</h3>
       <p>
-        [Written copy for the Page 2 here]
+        We are a company dedicated to providing online positioning to our clients based on the latest technologies that allow us to offer the best possible user experience, without neglecting aesthetics, functionality and positioning.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img class="imgExample" src="images/web-development-647_062317054646.jpg" alt="image for page">
+        <img class="imgExample" src="images/web-development-2021.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact</h3>
       <p>
-        [Written copy for the Page 3 here]
+        If you wish to receive more information, fill out the following form
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img class="imgExample" src="images/shutterstock_394793860-1024x784.jpg" alt="image for page3">
+        <img class="imgExample" src="images/Web-Development-Company-USA.jpg" alt="image for page3">
 
       </ul>
       <hr>
